...

        //Отримуємо секцію
        guard let section = Section(rawValue: indexPath.section) else { fatalError() }

        //Вертаємо або кнопку Done або Undone
        switch section {
        case .toDo: return "Done"
        case .done: return "Undone"
        }
    }
    
    //Метод для тапу на контейнер
    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
...
